--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -151,7 +151,7 @@
         <nav class="nav" role="navigation">
             <div class="container nav-elements">
                 <div class="branding">
-                    <a href="#home"><img th:src="@{images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
+                    <a href="@{/home}"><img th:src="@{images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
                     <p class="address">100 Main Street<br>
                         Seattle, WA 98144
                     </p>
