Implementing the registration of a user

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title>HPlus</title>
+    <title>H Plus homepage</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{/webjars/css/bootstrap.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -11,7 +12,7 @@
     <nav class="nav" role="navigation">
         <div class="container nav-elements">
             <div class="branding">
-                <a href="#home"><img th:src="@{images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
+                <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
             </div><!-- branding -->
             <ul class="navbar">
                 <li><a th:href="@{/home}">home</a></li>
@@ -66,7 +67,7 @@
         <h2 class="headline">People</h2>
         <div class="people-cards">
             <div class="person-card">
-                <img th:src="@{images/employees/HenryTwill.jpg}" alt="HenryTwill Photo">
+                <img th:src="@{/images/employees/HenryTwill.jpg}" alt="HenryTwill Photo">
                 <div class="card-info">
                     <h3 class="card-name">Henry Twill, Jr</h3>
                     <h4 class="card-title">CEO</h4>
@@ -79,7 +80,7 @@
             </div><!-- person-card -->
 
             <div class="person-card">
-                <img th:src="@{images/employees/JessicaNewton.jpg}" alt="JessicaNewton Photo">
+                <img th:src="@{/images/employees/JessicaNewton.jpg}" alt="JessicaNewton Photo">
                 <div class="card-info">
                     <h3 class="card-name">Jessica Newton-Smith, MBA</h3>
                     <h4 class="card-title">CFO</h4>
@@ -91,7 +92,7 @@
             </div><!-- person-card -->
 
             <div class="person-card">
-                <img th:src="@{images/employees/PhiTang.jpg}" alt="PhiTang Photo">
+                <img th:src="@{/images/employees/PhiTang.jpg}" alt="PhiTang Photo">
                 <div class="card-info">
                     <h3 class="card-name">Phi Tang, MBA</h3>
                     <h4 class="card-title">Director of Product Development</h4>
@@ -104,7 +105,7 @@
             </div><!-- person-card -->
 
             <div class="person-card">
-                <img th:src="@{images/employees/MariaSontas.jpg}" alt="MariaSontas Photo">
+                <img th:src="@{/images/employees/MariaSontas.jpg}" alt="MariaSontas Photo">
                 <div class="card-info">
                     <h3 class="card-name">Maria Sontas</h3>
                     <h4 class="card-title">Director of Marketing</h4>
@@ -117,7 +118,7 @@
             </div><!-- person-card -->
 
             <div class="person-card">
-                <img th:src="@{images/employees/AngelaHaston.jpg}" alt="AngelaHaston Photo">
+                <img th:src="@{/images/employees/AngelaHaston.jpg}" alt="AngelaHaston Photo">
                 <div class="card-info">
                     <h3 class="card-name">Angela Hashton</h3>
                     <h4 class="card-title">Director of Sales</h4>
@@ -130,7 +131,7 @@
             </div><!-- person-card -->
 
             <div class="person-card">
-                <img th:src="@{images/employees/MichaelLewiston.jpg}" alt="MichaelLewiston Photo">
+                <img th:src="@{/images/employees/MichaelLewiston.jpg}" alt="MichaelLewiston Photo">
                 <div class="card-info">
                     <h3 class="card-name">Michael Lewiston</h3>
                     <h4 class="card-title">MFA, Creative Director</h4>
@@ -151,7 +152,7 @@
         <nav class="nav" role="navigation">
             <div class="container nav-elements">
                 <div class="branding">
-                    <a href="@{/home}"><img th:src="@{images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
+                    <a href="@{/home}"><img th:src="@{/images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
                     <p class="address">100 Main Street<br>
                         Seattle, WA 98144
                     </p>
@@ -164,5 +165,7 @@
             be construed to be representative of actual products on the market in a similar product category.</p>
     </div><!-- container -->
 </footer><!-- footer -->
+
+<script th:src="@{/webjars/js/bootstrap.js}"></script>
 </body>
 </html>
