--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>H+ Sport</title>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <title>H+ Sport user registration</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -12,13 +13,13 @@
     <nav class="nav" role="navigation">
         <div class="container nav-elements">
             <div class="branding">
-                <a href="#home"><img src="images/hpluslogo.svg"
-                                     alt="Logo - H Plus Sports"></a>
+                <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}"
+                                           alt="Logo - H Plus Sports"></a>
             </div>
             <!-- branding -->
             <ul class="navbar">
-                <li><a href="">home</a></li>
-                <li><a href="">search</a></li>
+                <li><a th:href="@{/home}">home</a></li>
+                <li><a th:href="@{/goToSearch}">search</a></li>
                 <li><a href="">linkedIn</a></li>
 
             </ul>
@@ -35,29 +36,43 @@
 <!-- #home -->
 
 
-
-
 <section id="registration" class="section">
     <div class="container tagline">
-        <em>Register User</em><br/>
-        <form method="post" action="#" >
-            <label>Username</label> <input name="username" type="text" /><br/>
-            <label>Password</label> <input name="password" type="password" /><br/>
-            <label>First Name</label> <input name="firstName" type="text" /><br/>
-            <label>Last Name</label> <input name="lastName" type="text" /><br/>
-            <label>What do you want to do? </label>
-            <input type="radio" name="activity" id="activity" value="Playing a sport">Play a Sport?
-            <input type="radio" name="activity" id="activity" value="Exercise in Gym">Hit the Gym?<br/>
-            <label>Date of birth</label>
-            <input name="dateOfBirth" type="date" /><br/>
-            <label>Gender</label>
-            <select>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-                <option value="Other">Other</option>
+        <em>Register a new User</em><br/>
+        <form method="post" th:action="@{/registeruser}" th:object="${newuser}">
+            <div class="mb-3">
+                <label>Username</label> <input class="form-control" th:field="*{username}" type="text"/><br/>
+            </div>
+            <div class="mb-3">
+                <label>Password</label> <input th:field="*{password}" type="password"/><br/>
+            </div>
+            <div class="mb-3">
+                <label>First Name</label> <input th:field="*{firstName}" type="text"/><br/>
+            </div>
+            <div class="mb-3">
+                <label>Last Name</label> <input th:field="*{lastName}" type="text"/><br/>
+            </div>
+            <div>
+                <label>What do you want to do? </label>
+                <input type="radio" name="activity" id="activity" value="sport">Play a Sport?
+                <input type="radio" name="activity" id="activity" value="gym">Hit the Gym?<br/>
+            </div>
+            <div>
+                <label>Date of birth</label>
+                <input th:field="*{dateOfBirth}" type="date"/><br/>
+            </div>
+            <div>
+                <label>Gender</label>
+                <select>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
 
-            </select><br/>
-            <input type="submit" value="Submit" id="submit">
+                </select><br/>
+            </div>
+            <div>
+                <input type="submit" value="Submit" id="submit">
+            </div>
         </form>
     </div>
 </section>
@@ -66,7 +81,7 @@
         <nav class="nav" role="navigation">
             <div class="container nav-elements">
                 <div class="branding">
-                    <a href="#home"><img src="images/hpluslogo.svg"
+                    <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}"
                                          alt="Logo - H Plus Sports"></a>
                     <p class="address">
                         100 Main Street<br> Seattle, WA 98144
@@ -86,8 +101,7 @@
 </footer>
 <!-- footer -->
 
-
-
+<script th:src="@{/webjars/js/bootstrap.js}"></script>
 
 </body>
 </html>
