--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <meta charset="ISO-8859-1">
-    <title>Hplus</title>
+    <title>Hplus login</title>
 </head>
 <body>
 <header id="home" class="header">
@@ -29,13 +29,17 @@
 </div>container tagline -->
 </header>
 <!-- #home -->
-
+<span th:text="${dataSaved}"></span>
 <section id="login" class="section">
     <div class="container tagline">
         <em>LOGIN USER</em>
         <form action="#" method="post" >
+            <div class="mb-3">
             <label>Username</label> <input type="text" name="username"/><br />
+            </div>
+            <div class="mb-3">
             <label>Password</label> <input type="password" name="password"/><br />
+            </div>
             <input type="submit" value="Login">
         </form>
         <a class="card-title" th:href="@{/goToRegistration}">Register new user? Click here</a>
@@ -50,7 +54,7 @@
         <nav class="nav" role="navigation">
             <div class="container nav-elements">
                 <div class="branding">
-                    <a href="#home"><img src="images/hpluslogo.svg"
+                    <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}"
                                          alt="Logo - H Plus Sports"></a>
                     <p class="address">
                         100 Main Street<br> Seattle, WA 98144
