--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title>H+ Sport</title>
+    <title>H+ Sport search page</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -215,7 +215,7 @@
         <nav class="nav" role="navigation">
             <div class="container nav-elements">
                 <div class="branding">
-                    <a href="#home"><img src="images/hpluslogo.svg"
+                    <a href="@{/home}"><img th:src="@{/images/hpluslogo.svg}"
                                          alt="Logo - H Plus Sports"></a>
                     <p class="address">
                         100 Main Street<br> Seattle, WA 98144
