Refactoring view pages

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -141,6 +141,7 @@ em {
 
 .nav .nav-elements .navbar a {
 	font-weight: 600;
+	font-size: 1.75rem;
 	color: #fff;
 	text-decoration: none;
 	padding: 0 1rem;
