--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title>H Plus homepage</title>
+    <title>H+ Sport home</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{/webjars/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -18,7 +18,7 @@
                 <li><a th:href="@{/home}">home</a></li>
                 <li><a th:href="@{/goToLogin}">login</a></li>
                 <li><a th:href="@{/goToSearch}">search</a></li>
-                <li><a th:href="@{redirect}">linkedin</a></li>
+                <li><a href="#">linkedin</a></li>
             </ul><!-- navbar -->
         </div><!-- container nav-elements -->
     </nav>
@@ -152,7 +152,7 @@
         <nav class="nav" role="navigation">
             <div class="container nav-elements">
                 <div class="branding">
-                    <a href="@{/home}"><img th:src="@{/images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
+                    <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}" alt="Logo - H Plus Sports"></a>
                     <p class="address">100 Main Street<br>
                         Seattle, WA 98144
                     </p>
@@ -166,6 +166,7 @@
     </div><!-- container -->
 </footer><!-- footer -->
 
-<script th:src="@{/webjars/js/bootstrap.js}"></script>
+<script th:src="@{/webjars/jquery/3.6.3/jquery.js}"></script>
+<script th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.js}"></script>
 </body>
 </html>
