--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.css}">
     <meta charset="ISO-8859-1">
-    <title>Hplus login</title>
+    <title>H+ Sport login</title>
 </head>
 <body>
 <header id="home" class="header">
@@ -11,7 +12,7 @@
         <div class="container nav-elements">
             <div class="branding">
                 <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}"
-                                     alt="Logo - H Plus Sports"></a>
+                                           alt="Logo - H Plus Sports"></a>
             </div>
             <!-- branding -->
             <ul class="navbar">
@@ -33,14 +34,16 @@
 <section id="login" class="section">
     <div class="container tagline">
         <em>LOGIN USER</em>
-        <form action="#" method="post" >
+        <form action="#" method="post">
             <div class="mb-3">
-            <label>Username</label> <input type="text" name="username"/><br />
+                <label>Username</label> <input type="text" name="username"><br/>
             </div>
             <div class="mb-3">
-            <label>Password</label> <input type="password" name="password"/><br />
+                <label>Password</label> <input type="password" name="password"><br/>
             </div>
-            <input type="submit" value="Login">
+            <div class="mb-3">
+                <input type="submit" value="Login">
+            </div>
         </form>
         <a class="card-title" th:href="@{/goToRegistration}">Register new user? Click here</a>
     </div>
@@ -55,7 +58,7 @@
             <div class="container nav-elements">
                 <div class="branding">
                     <a th:href="@{/home}"><img th:src="@{/images/hpluslogo.svg}"
-                                         alt="Logo - H Plus Sports"></a>
+                                               alt="Logo - H Plus Sports"></a>
                     <p class="address">
                         100 Main Street<br> Seattle, WA 98144
                     </p>
@@ -73,6 +76,9 @@
     <!-- container -->
 </footer>
 <!-- footer -->
+
+<script th:src="@{/webjars/jquery/3.6.3/jquery.js}"></script>
+<script th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.js}"></script>
 
 </body>
 </html>
